--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -11,7 +11,7 @@
     width: 100%;
     margin : 0;
     padding: 0;
-    height: 5%;
+    height: 15vh;
     min-height: 50px;
 }
 
@@ -21,22 +21,31 @@
     align-items: center;
 }
 
+#navbar .row.menu {
+    min-height: 10vh;
+}
+
 #navbar .row div {
     display: inline-flex;
 }
 
 #navbar .row .logo {
-    height: 100%;
+    height: 20vh;
+    width: 35vh;
     background-color: red;
     background-size: cover;
+    position: absolute;
+    z-index: 3;
 }
 
 @media(min-width: 767px) {
     #navbar .row .logo {
-        margin-left: 20%;
-        margin-right: 20px;
-        width: 10%;
+        margin-left: 20vw;
     }
+}
+
+#navbar .row .user {
+    margin-left: calc(35vh + 20vw + 20px);
 }
 
 #navbar .row .user div:not(:first-child) {
@@ -51,4 +60,90 @@
     flex-grow: 1;
     justify-content: flex-end;
     padding-right: 20px;
+}
+
+#order-process {
+    background-color: #f39c12;
+    height: 10vh;
+}
+
+#order-process .step {
+    background-color: #f39c12;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position:relative;
+    margin-right: 5vh;
+    z-index: 2;
+    padding-right: 60px;
+    padding-left: 60px;
+    text-align: center;
+}
+
+#order-process .step:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    margin-top: -5vh;
+    width: 0;
+    height: 0;
+    border-top: 5vh solid transparent;
+    border-right: 5vh solid transparent;
+    border-bottom: 5vh solid transparent;
+    border-left: 20px solid #ecf0f1;
+}
+
+#order-process .step:after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: calc(100% - 0.5px);
+    top: 50%;
+    margin-top: -5vh;
+    width: 0;
+    height: 0;
+    border-top: 5vh solid transparent;
+    border-right: 5vh solid transparent;
+    border-bottom: 5vh solid transparent;
+    border-left: 20px solid #f39c12;
+}
+
+#order-process .step.active{
+    background-color: #e67e22;
+    margin-left: -5vh;
+    padding-left: calc(5vh + 60px);
+    z-index: 1;
+}
+
+#order-process .process .step:first-child {
+    padding-left: calc(30vw + 60px + 5vh);
+}
+
+#order-process .step.active:after {
+    border-left: 20px solid #e67e22;
+}
+
+#footer {
+    background-color: #34495e;
+    color: #95a5a6;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin : 0;
+    padding: 0;
+    height: 5%;
+    min-height: 50px;
+    text-align: center;
+    font-size: small;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#container {
+    min-height: 80%;
 }
