Login et changement navbar

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -18,7 +18,7 @@ body {
     margin : 0;
     padding: 0;
     height: 10vh;
-    min-height: 100px;
+    min-height: 90px;
 }
 
 #navbar .row {
@@ -37,11 +37,9 @@ body {
 }
 
 #navbar .row .logo {
-    height: 100px;
+    height: 90px;
     width: 200px;
-    background-color: red;
     background-size: 100%;
-    background-repeat: no-repeat;
     position: absolute;
     z-index: 3;
 }
@@ -96,7 +94,7 @@ body {
 #order-process {
     background-color: #FFCC80;
     height: 5vh;
-    min-height: 50px;
+    min-height: 40px;
 }
 
 #order-process .step {
@@ -120,12 +118,12 @@ body {
     position: absolute;
     left: 100%;
     top: 50%;
-    margin-top: -25px;
+    margin-top: -20px;
     width: 0;
     height: 0;
-    border-top: 25px solid transparent;
-    border-right: 25px solid transparent;
-    border-bottom: 25px solid transparent;
+    border-top: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 20px solid transparent;
     border-left: 20px solid #ecf0f1;
 }
 
@@ -133,14 +131,14 @@ body {
     content: '';
     display: block;
     position: absolute;
-    left: calc(100% - 0.5px);
+    left: calc(100% - 1px);
     top: 50%;
-    margin-top: -25px;
+    margin-top: -20px;
     width: 0;
     height: 0;
-    border-top: 25px solid transparent;
-    border-right: 25px solid transparent;
-    border-bottom: 25px solid transparent;
+    border-top: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 20px solid transparent;
     border-left: 20px solid #FFCC80;
 }
 
@@ -191,7 +189,6 @@ body {
 }
 
 #container {
-    margin-top: 10vh;
     width: 100vw;
     margin: 0;
     padding: 0;
@@ -229,10 +226,7 @@ body {
 
 .button {
     background-color: #66BB6A;
-    padding-right: 1em;
-    padding-left: 1em;
-    padding-top: .25em;
-    padding-bottom: .25em;
+    padding: .25em 1em;
     border-radius: 5px;
     color: white;
     font-weight: bold;
@@ -243,8 +237,5 @@ body {
 }
 
 .btn-lg {
-    padding-right: 2em;
-    padding-left: 2em;
-    padding-top: .5em;
-    padding-bottom: .5em;
+    padding: .5em 2em;
 }
