--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -42,20 +42,18 @@
 
 .content {
     padding-top: 20px;
-    padding-bottom: 0px;
+    padding-bottom: 0;
 }
 
 form {
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
 input {
     min-height: 2em;
     font-size: 14px;
     border-radius: 4px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #E0E0E0;
+    border: 1px solid #E0E0E0;
     padding: 5px;
     width: 50%;
     display: inline-block;
