--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -45,9 +45,8 @@
     background-color: #F3E5F5;
 }
 
-.summary input {
-    max-width: 3em;
-    text-align: center;
+.summary tbody tr {
+    border-bottom: 1px solid #BDBDBD;
 }
 
 .validate {
