--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -1,13 +1,22 @@
-.product {
-    margin-top: 100px;
+#container {
     display: flex;
-    border-right-style:groove;
+    flex-direction: column;
+    align-items: center;
+}
+
+.product {
+    display: flex;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #E0E0E0;
+    margin: 10px;
+    margin-left: 0;
+    padding-top: 10px;
     flex-direction: column;
     justify-content:flex-start;
     align-items:center;
-    width:250px;
-    height:300px;
-
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .product:hover {
@@ -63,7 +72,7 @@
 }
 
 .button {
-    background-color: green;
+    background-color: #66BB6A;
     border-right-style: groove;
 }
 
@@ -78,17 +87,17 @@
 
 }
 
-.content {
+.content-categorie {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: calc(50vw + 320px);
 }
 
-.content .categorie {
+.content-categorie .categorie {
     background-color: #DDA0DD;
-    width: 28%;
-    height: 7%;
-    max-height: 2.5em;
+    width: 33%;
+    padding: 0.5em;
     margin-top: 20px;  
     text-align: center;
     text-transform: uppercase;
@@ -98,52 +107,73 @@
     justify-content: center;
 }
 
-.content .categorie:hover {
+.content-categorie .categorie:hover {
     box-shadow: 1px 1px 12px #DDA0DD;
-    background-color: purple; 
-
-
+    background-color: purple;
 }
-.content .active {
+
+.content-categorie .active {
  	background-color: purple; 
 }
 
 .full {
-	display: flex;
-	flex-direction: row;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 0;
-   justify-content: center;
-   margin-left: 60px;
-    
-}
-
-.title2 {
     display: flex;
-    width: 80%;
-    height: 20%;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    background-color: #DDA0DD;
-    color :white;
-    font-size: 230%;
-    text-transform: uppercase;
-    margin: 20px 60px 20px 50px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding-bottom: 0;
+    width: 50vw;
 }
 
-.title2:hover {
-    box-shadow: 1px 1px 6px #DDA0DD;
+@media(max-width: 767px) {
+
+    .content-categorie {
+        width: 90vw;
+    }
+
+    .full {
+        width: 90vw;
+        order: 2;
+        justify-content: center;
+    }
+
+    .margin-top-row {
+        flex-direction: column!important;
+        align-items: center;
+    }
+
+    .right-cart {
+        order: 1;
+        margin-bottom : 20px;
+        margin-left: 0!important;
+        align-self: center!important;
+    }
 }
+
+.text_pickup {
+    display:block ;
+    width: 80%;
+    font-size: small;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #BDBDBD;
+}
+
 
 .text_resume {
     display:block ;
     float:left;
+    width: 80%;
+    font-size: small;
+}
+
+.text_resume table {
+    font-size: small;
+    width: 100%;
 }
 
 .button_order {
-    background-color: green;
+    background-color: #66BB6A;
     border-right-style:groove;
     margin-bottom: 20px;
 }
@@ -167,18 +197,6 @@
     margin-left: 10px;
 }
 
-.prod_cancel:hover {
-    box-shadow: 1px 1px 12px #555;
-}
-
-.prod_plus:hover {
-    box-shadow: 1px 1px 12px #555;
-}
-
-.prod_minus:hover {
-    box-shadow: 1px 1px 12px #555;
-}
-
 .title3 {
     display: flex;
     width: 80%;
@@ -197,19 +215,59 @@
     box-shadow: 1px 1px 12px #555;
 }
 
-
-.product2 {
-    margin-top: 100px;
+.right-cart {
     display: flex;
     flex-direction: column;
     justify-content:flex-start;
     align-items:center;
     width:250px;
-    height:260px;
     margin-left: 70px;
-    margin-bottom: 60px;
+    align-self: flex-start;
+    box-shadow: 1px 1px 12px #BDBDBD;
 }
 
-.product2:hover {
-     box-shadow: 1px 1px 12px #555;
+.right-cart:hover {
+    box-shadow: 1px 1px 12px #9E9E9E;
+}
+
+.right-cart .top, .right-cart .bottom {
+    display: flex;
+    width: 100%;
+    height: 3em;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: #E91E63;
+    color :white;
+    font-size: large;
+    text-transform: uppercase;
+}
+
+.right-cart .top {
+    margin-bottom: 20px;
+}
+
+.right-cart .bottom {
+    margin-top: 20px;
+}
+
+.title2:hover {
+    box-shadow: 1px 1px 6px #DDA0DD;
+}
+
+.row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.margin-top-row {
+    margin-top: 100px;
+}
+
+@media(max-height: 1000px) {
+    .margin-top-row {
+        margin-top: 50px;
+    }
 }
