--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -6,11 +6,8 @@
 
 .product {
     display: flex;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #E0E0E0;
-    margin: 10px;
-    margin-left: 0;
+    border: 1px solid #E0E0E0;
+    margin: 10px 10px 10px 0;
     padding-top: 10px;
     flex-direction: column;
     justify-content:flex-start;
