--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -1,9 +1,42 @@
+
+
+.title{
+    background-color: #6A1B9A;
+    width: calc(100% - 40px);
+    padding: 20px;
+    font-size: large;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.titre{
+    background-color: #6A1B9A;
+    width: 60%;
+    padding: 20px;
+    font-size: large;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+
 .name{
 
     background-color: white;
     width: calc(100% - 40px);
     padding: 20px;
-    font-size: large;
+    font-size: 100%;
     font-weight: bold;
     text-transform: uppercase;
     color: black;
@@ -36,8 +69,7 @@
     padding-top: 20px;
     padding-bottom: 0;
    justify-content: center;
-   margin-left: 60px;
-    
+  
 }
 .vroum
 {
@@ -50,8 +82,45 @@
 }
 
 .head:hover{
-
-
     box-shadow: 1px 1px 12px #DDA0DD;
 }
 
+.titre:hover{
+    box-shadow: 1px 1px 12px #DDA0DD;
+}
+.title:hover{
+    box-shadow: 1px 1px 12px #DDA0DD;
+}
+
+
+table, tr, th {
+    border-collapse: collapse;
+    border: 0,4px solid black;
+    width: 100%;
+    text-align: left;
+    padding: 5px;
+    padding-left: 10px
+
+}
+
+td {
+    padding: 10px;
+}
+
+.name-order {
+    background-color: #99e699;
+    border-bottom :1px solid black;
+
+
+}
+
+.list-order {
+    background-color: #ff6666;
+    background-size: 80%;
+
+}
+
+.price {
+    text-align: right
+    padding-right: 20px;
+}
