--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -238,6 +238,8 @@ body {
     border-radius: 5px;
     color: white;
     font-weight: bold;
+    border: 0;
+    font-size: medium;
 }
 
 .button:hover {
