--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -13,10 +13,28 @@
     text-align: center;
 }
 
-
 .obligatoire{
     color:red;
 }
- p{
-    font-size : 8px;
- }
+
+.mail-warning {
+    font-size : x-small;
+}
+
+.missing-field {
+    text-align: center;
+    font-size: small;
+    color: red;
+    font-weight: bold;
+    margin: 0;
+    width: 50%;
+    margin-left: calc(30% + 1.5em);
+}
+
+.error-message {
+    text-align: center;
+    font-size: medium;
+    margin: 0;
+    margin-bottom: 20px;
+    color: red;
+}
