--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -19,6 +19,15 @@
     padding: 20px;
 }
 
+@media (max-width: 767px) {
+    #admin {
+        width: calc(100vw - 10px);
+        margin: 0;
+        margin-top: 5vh;
+        padding: 5px;
+    }
+}
+
 table {
     margin-bottom: 20px;
 }
@@ -140,4 +149,27 @@ label {
     font-size: medium;
     margin: 0 0 20px;
     color: red;
+}
+
+.admin-menu {
+    width: calc(100% - 20px);
+    background-color: #263238;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    margin-bottom : 20px;
+}
+
+.admin-menu div {
+    margin-right: 20px;
+}
+
+@media (max-width: 767px) {
+    .admin-menu {
+        flex-direction: column;
+    }
+    .admin-menu div:not(:first-child) {
+        margin-right: 0px;
+        margin-top: 10px;
+    }
 }
