--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -169,7 +169,15 @@ label {
         flex-direction: column;
     }
     .admin-menu div:not(:first-child) {
-        margin-right: 0px;
+        margin-right: 0;
         margin-top: 10px;
     }
+}
+
+.no-button {
+    border: 0;
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    font-size: small;
 }
